@@ -6,23 +6,25 @@ import com.ecommerce.infra.exceptions.CartEmptyException;
 import com.ecommerce.infra.exceptions.OrderNotFoundException;
 import com.ecommerce.infra.exceptions.StockUnavailableException;
 import com.ecommerce.infra.exceptions.UserNotFoundException;
+import com.ecommerce.model.cart.CartModel;
 import com.ecommerce.model.cart.cartItem.CartItem;
 import com.ecommerce.model.orders.OrderModel;
 import com.ecommerce.model.orders.OrderStatus;
 import com.ecommerce.model.orders.ordersItems.OrderItem;
-import com.ecommerce.model.product.ProductModel;
 import com.ecommerce.model.repositorys.*;
 import com.ecommerce.model.users.Users;
 import jakarta.transaction.Transactional;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ServiceOrders {
 
+    private final Logger logger= LoggerFactory.getLogger(ServiceOrders.class);
     private final OrdersRepository ordersRepository;
     private final CartRepository cartRepository;
     private final CartItemRepository cartItemRepository;
@@ -40,72 +42,79 @@ public class ServiceOrders {
 
     @Transactional
     public DataOrderResponse checkout(Long userId) {
-        Users user = usersRepositroy.findById(userId)
-                .orElseThrow(() -> new UserNotFoundException(userId));
+        logger.info("Iniciando checkout para o usuário {}", userId);
 
-        var cart = cartRepository.findByUsersId(userId)
-                .orElseThrow(() -> new OrderNotFoundException(userId));
+        var user = findUserById(userId);
+        var cart = findCartByUserId(userId);
 
-        List<CartItem> cartItems = cartItemRepository.findAllByCartId(cart.getId());
-
+        var cartItems = cartItemRepository.findAllByCartId(cart.getId());
         if (cartItems.isEmpty()) {
+            logger.warn("Carrinho vazio para o usuário {}", userId);
             throw new CartEmptyException();
         }
 
-        List<OrderItem> orderItems = cartItems.stream().map(item -> {
-            ProductModel product = item.getProduct();
+        var orderItems = buildOrderItems(cartItems);
+        var order = buildOrder(user, orderItems);
 
+        ordersRepository.save(order);
+        cartItemRepository.deleteAll(cartItems);
+
+        logger.info("Checkout finalizado para o usuário {} com pedido ID {}", userId, order.getId());
+        return buildOrderResponse(order, orderItems);
+    }
+
+    private Users findUserById(Long id) {
+        return usersRepositroy.findById(id).orElseThrow(() -> {
+            logger.warn("Usuário não encontrado com ID {}", id);
+            return new UserNotFoundException(id);
+        });
+    }
+
+    private CartModel findCartByUserId(Long userId) {
+        return cartRepository.findByUsersId(userId).orElseThrow(() -> {
+            logger.warn("Carrinho não encontrado para o usuário {}", userId);
+            return new OrderNotFoundException(userId);
+        });
+    }
+
+    private List<OrderItem> buildOrderItems(List<CartItem> cartItems) {
+        return cartItems.stream().map(item -> {
+            var product = item.getProduct();
             if (product.getQuant() < item.getQuantity()) {
+                logger.warn("Estoque insuficiente para o produto {} durante checkout", product.getName());
                 throw new StockUnavailableException(product.getName());
             }
-
             product.setQuant(product.getQuant() - item.getQuantity());
             productRepository.save(product);
 
-            OrderItem orderItem = new OrderItem();
+            var orderItem = new OrderItem();
             orderItem.setProduct(product);
             orderItem.setQuantity(item.getQuantity());
             orderItem.setPrice(product.getPrice());
             return orderItem;
-        }).collect(Collectors.toList());
+        }).toList();
+    }
 
-        OrderModel order = new OrderModel();
+    private OrderModel buildOrder(Users user, List<OrderItem> items) {
+        var order = new OrderModel();
         order.setUsers(user);
         order.setStatus(OrderStatus.PENDENTE);
         order.setCreatedAt(LocalDateTime.now());
-        order.setItems(orderItems);
-
-        orderItems.forEach(item -> item.setOrder(order));
-
-        ordersRepository.save(order);
-
-        cartItemRepository.deleteAll(cartItems);
-
-        List<DataOrderItemResponse> itemResponses = orderItems.stream().map(i ->
-                new DataOrderItemResponse(
-                        i.getProduct().getId(),
-                        i.getProduct().getName(),
-                        i.getQuantity(),
-                        i.getPrice()
-                )
-        ).toList();
-
-        return new DataOrderResponse(order.getId(), order.getStatus(), order.getCreatedAt(), itemResponses);
+        order.setItems(items);
+        items.forEach(i -> i.setOrder(order));
+        logger.debug("Pedido criado para o usuário {} com {} itens", user.getId(), items.size());
+        return order;
     }
 
-    public List<DataOrderResponse> listOrdersByUser(Long userId) {
-        return ordersRepository.findByUsersId(userId).stream().map(order -> {
-            List<DataOrderItemResponse> items = order.getItems().stream().map(i ->
-                    new DataOrderItemResponse(
-                            i.getProduct().getId(),
-                            i.getProduct().getName(),
-                            i.getQuantity(),
-                            i.getPrice()
-                    )
-            ).toList();
+    private DataOrderResponse buildOrderResponse(OrderModel order, List<OrderItem> items) {
+        var itemResponses = items.stream().map(i -> new DataOrderItemResponse(
+                i.getProduct().getId(),
+                i.getProduct().getName(),
+                i.getQuantity(),
+                i.getPrice()
+        )).toList();
 
-            return new DataOrderResponse(order.getId(), order.getStatus(), order.getCreatedAt(), items);
-        }).toList();
+        return new DataOrderResponse(order.getId(), order.getStatus(), order.getCreatedAt(), itemResponses);
     }
 
 }
